@@ -7,7 +7,7 @@
 Generates a Quantile-Quantile plot for -log10 p-values from genome wide association tests.
 }
 \usage{
-qqPlot(pval, truncate = FALSE, sub = NULL, ...)
+qqPlot(pval, truncate = FALSE, ...)
 }
 
 \arguments{
@@ -15,7 +15,6 @@ qqPlot(pval, truncate = FALSE, sub = NULL, ...)
 }
   \item{truncate}{A logical value indicating whether the y-axis should be truncted to the same range as the x-axis.
   }
-  \item{sub}{A character string to print under the x-axis.}
   \item{\dots}{Other parameters to be passed directly to \code{\link{plot}}.}
   
 }
@@ -27,9 +26,6 @@ scale, with the option of truncating the y-axis to the range of the
 x-axis \code{(0, -log10(1/length(pval))}.  If the y-axis is truncated, 
 then points off the top of the plot are denoted by triangles at the upper edge.  
 The 95\% confidence interval is shaded in gray.
-
-If \code{sub=NULL} (the default), the genomic inflation factor lambda is
-  calculated from the p-values and printed.
 }
 \author{Cathy Laurie, Matthew P. Conomos
 }
